# AdjFind

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  install.sh  meta.yaml  prepositioning_proposal.md  snapcraft.yaml
.github/workflows/: build-and-release.yml  release.yml
Formula/: adjfind.rb
debian/: changelog  control  copyright  install  rules
docs/: CONDA_TESTING.md  HOMEBREW.md
include/: adjfind_version.hpp.in
include/graph/: adj_graph.hpp  common.hpp  convex_path.hpp  line_of_sight_visibility.hpp  neighboring_points.hpp  road_segmentation.hpp
include/io/: coordinate_system_utils.hpp  gdal_utils.hpp  geojson_reader.hpp  geojson_writer.hpp  point_reader.hpp  polygon_reader.hpp  road_reader.hpp  writer_convex_path.hpp  writer_dissolve_polygons.hpp  writer_neighboring_points.hpp  writer_road_segmentation.hpp  writer_visibility.hpp
include/wasm/: wasm_interface.hpp
scripts/: build-deb.sh  build.sh  setup-conda-debian.sh
src/: main.cpp
src/graph/: adj_graph.cpp  convex_path.cpp  geometry_conversion.cpp  line_of_sight_visibility.cpp  neighboring_points.cpp  road_segmentation.cpp
src/io/: coordinate_system_utils.cpp  gdal_utils.cpp  geojson_reader.cpp  geojson_writer.cpp  point_reader.cpp  polygon_reader.cpp  road_reader.cpp  writer_convex_path.cpp  writer_dissolve_polygons.cpp  writer_neighboring_points.cpp  writer_road_segmentation.cpp  writer_visibility.cpp
src/wasm/: wasm_interface.cpp
